ayat fragment created

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,11 @@
 <resources>
-    <string name="app_name">Quran</string>
+    <string name="app_name">Қураны Кәрийм</string>
     <string name="info"><p>ШАМСУДДИН БАҲАУДДИНОВ</p><p>ҚУРАНЫ КӘРИЙМ мәнилериниң аўдарма ҳәм тәфсири (Қарақалпақ тилинде)</p><p>Аўдармашы Шамсуддин БАҲАУДДИНОВ</p><p>Жуўаплы редактор Шайх Абдулазиз МАНСУР</p><p>Редакторлар  Шамшетдин АБДИНАЗИМОВ, Абдураҳман ИДРИСОВ, Рашид АББАЗОВ</p><p>Көркемлеўши редактор Равшан МАЛИКОВ</p><p>Дизайнер Юсуп ОРЫНБАЙ улы</p><p>Техник редактор Бекзод КАРИМОВ</p><p>Компьютерде териўшилер  Абдураҳман ИДРИСОВ, Акмал СУЛАЙМАНОВ</p><p></p><p></p><p></p><p>Қураны кәрийм: мәнилериниң аўдармасы ҳәм тәфсири / Өзбекистан Республикасы Министрлер Кабинети жанындағы Ташкент ислам университети; Шамсуддин Баҳауддинов.-Т.: «Ташкент ислам университети», 2016. - … б.</p><p>Баспа лицензиясы № 158. 14.08.09</p><p>Басыўға рухсат етилди 8 .01 . 2019-ж.</p><p>Форматы 84x108 1/16. Офсет баспа усылында басылды. Шәртли баспа табағы 65,52</p><p>Есап баспа табағы 65,36 Тиражы 8000 нусқа. Буйыртпа 18-630</p><p></p><p>«Тошкент ислом университети» баспа-полиграфия бирлеспеси.100011, А.Қодирий көшеси, 11-үй.</p><p></p><p>Өзбекистан Баспасөз ҳәм хабар агентлигиниң«O‘zbekiston» баспа-полиграфия дөретиўшилик үйи.100129, Ташкент, Наўайы көшеси, 30.</p></string>
     <string name="translation">Аўдарма</string>
     <string name="explanation">Түсиндирме</string>
     <string name="search">Излеў</string>
     <string name="search_by_title">Сүре бойынша излеў</string>
     <string name="todo">TODO</string>
+    <string name="increase">Increase</string>
+    <string name="decrease">Decrease</string>
 </resources>
