--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="increase">Increase</string>
     <string name="decrease">Decrease</string>
     <string name="favorites">Сайландылар</string>
-    <string name="additional">Қосымша</string>
+    <string name="information">Мағлыўматлар</string>
     <string name="share">Бөлисиў</string>
     <string name="add_to_favorite">Сайландыларға қосыў</string>
     <string name="removeFavorite">Сайландылардан өшириў</string>
