--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,5 +16,5 @@
     <string name="empty_favorites_text">Сайландылар бос</string>
     <string name="ayat_has_been_added_to_favorites">Аят сайландылар дизимине қосылды</string>
     <string name="share_ayat">Аятты бөлисиў</string>
-    <string name="sure_description">\"%1$s\" \"%2$s\" </string>
+    <string name="sure_description">%1$s %2$s</string>
 </resources>
