--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="share_ayat">Аятты бөлисиў</string>
     <string name="sure_description">%1$s %2$s</string>
     <string name="seach_by_ayat">Аят бойынша излеў</string>
+    <string name="you_can_not_use_latin">Ҳазирше латын ҳариплери арқалы излеў мүмкин емес</string>
 </resources>
